<?xml version="1.0"?>
<package>
  <name>robone_calibration</name>
  <version>0.1.0</version>
  <description>Robone calibration package</description>

  <maintainer email="john@todo.todo">john</maintainer>
  <license>BSD</license>

  <test_depend>gtest</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>